# hello_world_messagerie

./: .gitignore  .treeignore  DEPLOY.md  README.md  cleanup.sh  dev.sh  docker-compose.yml  env.example  fly.toml  package-lock.json  package.json  pnpm-lock.yaml  railway.json  release-note.md  render.yaml
.github/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml  release.yml
app/: globals.css  layout.tsx  page.tsx  tailwind.config.ts
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/migrations/: 001_init.sql  202604030001_servers_name_owner_live_guard.sql  202604220001_usernames_normalization.sql  202604220002_friendships.sql  202604230001_direct_messages.sql  init.mongo.js  init.sql  mongodb_indexes.js
backend/src/: ctx.rs  error.rs  main.rs
backend/src/handlers/: auth.rs  channels.rs  dm.rs  friends.rs  invites.rs  messages.rs  mod.rs  servers.rs  upload.rs  user.rs  user_public.rs
backend/src/models/: attachment.rs  channel.rs  dm.rs  invite.rs  message.rs  mod.rs  server.rs  user.rs
backend/src/repositories/: attachment.rs  channel.rs  dm.rs  dm_message.rs  friendship.rs  invite.rs  message.rs  mod.rs  server.rs  user.rs
backend/src/routes/: auth.rs  channels.rs  dm.rs  friends.rs  invite.rs  invites.rs  messages.rs  mod.rs  servers.rs  upload.rs  user.rs
backend/src/services/: auth.rs  bootstrap.rs  channels.rs  dm.txt  invite.rs  invites.rs  jwt.rs  messages.rs  mod.rs  password.rs  servers.rs  user.rs  usernames.rs
backend/src/services/realtime/: messaging.rs  mod.rs  presence.rs  typing.rs
backend/src/web/: mod.rs  mw_auth.rs
backend/src/web/ws/: connection.rs  dms.rs  handler.rs  hub.rs  metrics.rs  mod.rs  protocol.rs
docs/: README.md  SETUP.md  cloc-report.md  specification.txt
frontend/: env.example  eslint.config.ts  middleware.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  shell.nix  tailwind.config.ts  vercel.json
src/: ctx.rs  error.rs  main.rs
(+138 files in other folders)
