[package]
name = "hello-world-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
headers = "0.4"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database - PostgreSQL
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Database - MongoDB (messages)
mongodb = "3"
bson = { version = "2", features = ["uuid-1", "chrono-0_4"] }
futures = "0.3"

# Authentication
jsonwebtoken = "9"
bcrypt = "0.16"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "2"
